# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-cli"
version = "0.1.0"
edition = "2021"
description = "Agent Harbor CLI - Main command-line interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"

# AH core dependencies
ah-core = { path = "../ah-core" }
ah-domain-types = { path = "../ah-domain-types", features = ["clap"] }
ah-logging = { path = "../ah-logging" }
ah-repo = { path = "../ah-repo" }
ah-local-db = { path = "../ah-local-db" }
config-core = { path = "../config-core" }
ah-config-types = { path = "../ah-config-types" }
ah-agents = { path = "../ah-agents" }
ah-recorder = { path = "../ah-recorder" }
vt100 = { path = "../../vendor/vt100" }
crossterm = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
ureq = "2.9"
which = "6.0"

# SSZ serialization (matching agentfs-proto)
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# AgentFS dependencies
agentfs-proto = { path = "../agentfs-proto" }
ah-fs-snapshots = { path = "../ah-fs-snapshots" }
ah-fs-snapshots-traits = { path = "../ah-fs-snapshots-traits", features = [
  "clap",
] }

# UI and TUI dependencies
ah-tui = { path = "../ah-tui" }
ah-mux = { path = "../ah-mux" }
ah-mux-core = { path = "../ah-mux-core" }
ah-rest-client = { path = "../ah-rest-client" }
ah-workflows = { path = "../ah-workflows" }
tui-testing = { path = "../tui-testing" }
rusqlite = { version = "0.37", features = ["bundled"] }
sandbox-core = { path = "../sandbox-core", features = [
  "cgroups",
  "seccomp",
  "net",
  "devices",
] }
sandbox-seccomp = { path = "../sandbox-seccomp" }


# Mock REST client for testing
ah-rest-mock-client = { path = "../ah-rest-mock-client" }

# Multiplexer support

# Agent recording dependencies

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "ioctl"] }
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
ah-fs-snapshots-zfs = { path = "../ah-fs-snapshots-zfs" }
ah-fs-snapshots-btrfs = { path = "../ah-fs-snapshots-btrfs" }
ah-fs-snapshots-git = { path = "../ah-fs-snapshots-git" }

[target.'cfg(target_os = "macos")'.dependencies]
ah-sandbox-macos = { path = "../ah-sandbox-macos" }
ah-macos-launcher = { path = "../ah-macos-launcher" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "fileapi",
  "winioctl",
  "errhandlingapi",
] }

[features]
default = ["git"]
zfs = ["ah-fs-snapshots/zfs"]
btrfs = ["ah-fs-snapshots/btrfs"]
git = ["ah-fs-snapshots/git"]
agentfs = ["ah-fs-snapshots/agentfs"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
tui-testing = { path = "../tui-testing" }
assert_cmd = "2.0"
serial_test = "2.0"
serde_yaml = "0.9"
