# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-cli"
version = "0.1.0"
edition = "2021"
description = "Agent Harbor CLI - Main command-line interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"

# AH core dependencies
ah-core = { workspace = true }
ah-domain-types = { workspace = true, features = ["clap"] }
ah-logging = { workspace = true }
ah-repo = { workspace = true }
ah-local-db = { workspace = true }
config-core = { workspace = true }
ah-config-types = { workspace = true }
ah-agents = { workspace = true }
ah-recorder = { workspace = true }
vt100 = { workspace = true }
crossterm = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
schemars = "0.8"
ureq = "2.9"
which = "6.0"
futures-util = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.24"
tokio-stream = "0.1"
ah-rest-api-contract = { workspace = true }
ah-acp-bridge = { workspace = true }
agent-client-protocol = { workspace = true }
url = { workspace = true }

# SSZ serialization (matching agentfs-proto)
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# AgentFS dependencies
agentfs-proto = { workspace = true }
ah-fs-snapshots = { workspace = true }
ah-fs-snapshots-traits = { workspace = true, features = ["clap"] }

# UI and TUI dependencies
ah-tui = { workspace = true }
ah-mux = { workspace = true }
ah-mux-core = { workspace = true }
ah-rest-client = { workspace = true }
ah-rest-server = { workspace = true }
ah-workflows = { workspace = true }
tui-testing = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
sandbox-core = { workspace = true, features = [
  "cgroups",
  "seccomp",
  "net",
  "devices",
] }
sandbox-seccomp = { workspace = true }


# Mock REST client for testing
ah-rest-mock-client = { workspace = true }

# Multiplexer support

# Agent recording dependencies

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "ioctl"] }
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
ah-fs-snapshots-zfs = { workspace = true }
ah-fs-snapshots-btrfs = { workspace = true }
ah-fs-snapshots-git = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ah-sandbox-macos = { workspace = true }
ah-macos-launcher = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "fileapi",
  "winioctl",
  "errhandlingapi",
] }

[features]
default = ["git"]
zfs = ["ah-fs-snapshots/zfs"]
btrfs = ["ah-fs-snapshots/btrfs"]
git = ["ah-fs-snapshots/git"]
agentfs = ["ah-fs-snapshots/agentfs"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
tempdir = "0.3"
tui-testing = { workspace = true }
ah-scenario-format = { workspace = true }
assert_cmd = "2.0"
serial_test = "3"
serde_yaml = "0.9"
# T15.3 Schema validation tests - agentfs-proto already in main dependencies
ethereum_ssz = { workspace = true }
