# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-client-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ah-rest-api-contract = { path = "../ah-rest-api-contract" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
ah-test-utils = { workspace = true }
