# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-command-trace-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = [
  "net",
  "io-util",
  "sync",
  "rt-multi-thread",
  "macros",
] }
futures = "0.3"
thiserror = "1.0"
ah-command-trace-proto = { path = "../ah-command-trace-proto" }
tempfile = "3"
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
tracing = "0.1"
