# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-command-trace-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libc = "0.2"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
hex = "0.4"
redhook = "2.0"
tokio = { version = "1.0", features = [
  "net",
  "io-util",
  "sync",
  "rt-multi-thread",
  "time",
  "macros",
] }
tempfile = "3"
ah-command-trace-proto = { path = "../ah-command-trace-proto" }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
scopeguard = "1.2"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
ah-command-trace-shim = { path = "." }
