# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-command-trace-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
ctor = { workspace = true }
once_cell = "1.19"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
libc = "0.2"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
hex = "0.4"
stackable-hooks = { workspace = true }
tokio = { version = "1.0", features = [
  "net",
  "io-util",
  "sync",
  "rt-multi-thread",
  "time",
  "macros",
] }
tempfile = "3"
ah-command-trace-proto = { workspace = true }
ah-command-trace-client = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
scopeguard = { workspace = true }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
