# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-core"
version = "0.1.0"
edition = "2021"
description = "Core task and session lifecycle orchestration for Agent Harbor"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
ah-repo = { path = "../ah-repo" }
ah-workflows = { path = "../ah-workflows" }
ah-local-db = { path = "../ah-local-db" }
ah-domain-types = { path = "../ah-domain-types" }
ah-rest-api-contract = { path = "../ah-rest-api-contract" }
ah-rest-client = { path = "../ah-rest-client" }
ah-mux-core = { path = "../ah-mux-core" }
ah-mux = { path = "../ah-mux" }
ah-tui-multiplexer = { path = "../ah-tui-multiplexer" }
ureq = { version = "2.0", features = ["json"] }
tempfile = "3.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait.workspace = true
futures.workspace = true
async-stream = "0.3"
url = "2.5"
