# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-core"
version = "0.1.0"
edition = "2021"
description = "Core task and session lifecycle orchestration for Agent Harbor"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
ah-repo = { path = "../ah-repo" }
ah-workflows = { path = "../ah-workflows" }
ah-local-db = { path = "../ah-local-db" }
ah-domain-types = { path = "../ah-domain-types" }
ah-rest-api-contract = { path = "../ah-rest-api-contract" }
ah-rest-client = { path = "../ah-rest-client" }
ah-mux-core = { path = "../ah-mux-core" }
ah-mux = { path = "../ah-mux" }
ah-tui-multiplexer = { path = "../ah-tui-multiplexer" }
ureq = { version = "2.0", features = ["json"] }
tempfile = "3.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
which = "8.0"
async-trait.workspace = true
futures.workspace = true
async-stream = "0.3"
url = "2.5"
interprocess = { version = "2.0", features = ["tokio"] }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fst = "0.4"

# Aliases for SSZ crates (matching recorder pattern)
ssz = { package = "ethereum_ssz", version = "0.8" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }

[features]
default = [
  "tmux",
  "kitty",
  "neovim",
  "emacs",
  "screen",
  "vim",
  "wezterm",
  "zellij",
  "iterm2",
  "ghostty",
  "tilix",
  "windows-terminal",
]
# Propagate multiplexer features to ah-mux
tmux = ["ah-mux/tmux"]
kitty = ["ah-mux/kitty"]
wezterm = ["ah-mux/wezterm"]
zellij = ["ah-mux/zellij"]
screen = ["ah-mux/screen"]
ghostty = ["ah-mux/ghostty"]
tilix = ["ah-mux/tilix"]
windows-terminal = ["ah-mux/windows-terminal"]
vim = ["ah-mux/vim"]
neovim = ["ah-mux/neovim"]
emacs = ["ah-mux/emacs"]
iterm2 = ["ah-mux/iterm2"]

[dev-dependencies]
mockall = "0.12"
