# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-domain-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
utoipa = { version = "4.0", optional = true }

[features]
default = []
utoipa = ["dep:utoipa"]
